--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
         <a href="https://কবিতা.জীবনানন্দ.বাংলা/ebooks/জীবনানন্দ-দাশের-কবিতাসমগ্র.mobi"><i class="fa fa-book"
                 aria-hidden="true"></i> মোবি</a>
         <hr>
-        <a href="https://book.jibanananda.ml"><i class="fa fa-file-text" aria-hidden="true"></i> পড়ুন</a><br>
+        <a href="https://কবিতা.জীবনানন্দ.বাংলা"><i class="fa fa-file-text" aria-hidden="true"></i> পড়ুন</a><br>
         <hr>
         <a href="index.html">মূল পাতা</a> | <a href="gratitude.html">কৃতজ্ঞতা</a>
         <hr>
