--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     <title>{{ page.title }} ॥ {{ site.title }}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="yandex-verification" content="b42c78c14db9c0d7" />
     <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml" title="{{ site.title }}">
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/flexy-framework/flexy@v0.0.2-alpha/flexy.css">
